Add IPA SSML Google TTS generate-audio endpoint
Backend:
- Add google-cloud-texttospeech; IPA/SSML helpers (tts/ssml.py)
- tokenize_words, word_to_ipa, text_to_ssml_with_phonemes
- data/ipa_dictionary.json + loader with caching
- POST /generate-audio returns MP3 bytes (audio/mpeg)
- TTS permissions docs in README; test_tts.sh smoke script

Flutter:
- ApiClient.postBytes for binary response; ika_api.generateAudioBytes()
- Providers write MP3 to temp file, set audioUrl to file path
- AudioPlayerWidget plays from URL or file path (setFilePath)
- path_provider dependency

--- a/backend/ika-backend/requirements.txt
+++ b/backend/ika-backend/requirements.txt
@@ -3,5 +3,6 @@ uvicorn[standard]==0.24.0
 firebase-admin==6.2.0
 google-cloud-storage==2.10.0
 google-cloud-firestore==2.13.1
+google-cloud-texttospeech>=2.16.0
 pydantic==2.5.0
 python-multipart==0.0.6
