--- a/backend/ika-backend/requirements.txt
+++ b/backend/ika-backend/requirements.txt
@@ -5,3 +5,4 @@ google-cloud-storage==2.10.0
 google-cloud-firestore==2.13.1
 pydantic==2.5.0
 python-multipart==0.0.6
+google-cloud-texttospeech==2.16.3
