--- a/backend/ika-backend/Dockerfile
+++ b/backend/ika-backend/Dockerfile
@@ -18,4 +18,5 @@ ENV PYTHONUNBUFFERED=1
 EXPOSE 8080
 
 # Run the application
-CMD ["bash", "-lc", "uvicorn app.main:app --host 0.0.0.0 --port "]
+# Cloud Run sets PORT (default 8080)
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
