--- a/flutter_ika_app/pubspec.yaml
+++ b/flutter_ika_app/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   
   # Audio
   just_audio: ^0.9.36
-  
+  flutter_cache_manager: ^3.3.1
+
   # Local Storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
