--- a/backend/ika-backend/Dockerfile
+++ b/backend/ika-backend/Dockerfile
@@ -18,5 +18,6 @@ ENV PYTHONUNBUFFERED=1
 EXPOSE 8080
 
 # Run the application
-# Cloud Run sets PORT (default 8080)
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+# Cloud Run injects PORT at runtime; must listen on it
+ENV PORT=8080
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080}"]
