Fix backend imports; add /build-info; inject GIT_SHA; update Flutter client

--- a/backend/ika-backend/cloudbuild.yaml
+++ b/backend/ika-backend/cloudbuild.yaml
@@ -1,4 +1,5 @@
 # Build with Dockerfile and deploy to Cloud Run
+# Cloud Build substitutions: $COMMIT_SHA (full), $SHORT_SHA (short)
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/ika-backend', '.']
@@ -19,6 +20,6 @@ steps:
       - '--service-account'
       - 'ika-cloudrun-sa@ikause.iam.gserviceaccount.com'
       - '--set-env-vars'
-      - 'PROJECT_ID=ikause,LEXICON_COLLECTION=lexicon,FIREBASE_STORAGE_BUCKET=ikause.appspot.com,AUDIO_CACHE_PREFIX=audio-cache'
+      - 'PROJECT_ID=ikause,LEXICON_COLLECTION=lexicon,FIREBASE_STORAGE_BUCKET=ikause.appspot.com,AUDIO_CACHE_PREFIX=audio-cache,GIT_SHA=$COMMIT_SHA'
 images:
   - 'gcr.io/$PROJECT_ID/ika-backend'
