--- a/backend/ika-backend/requirements.txt
+++ b/backend/ika-backend/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+httpx>=0.25.0
 firebase-admin==6.2.0
 google-cloud-storage==2.10.0
 google-cloud-firestore==2.13.1
